--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,7 @@ html { height: 100%;}
 
 
 #map {
-  position: fixed;
-  height: 100%;
-  width: 100%;
-
-  /*top: 100px;*/
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  height: 400px;
   z-index: -1000;
   /*background: url(../img/map.png) no-repeat 100% 50%;*/
 }
