--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html { height: 100%;}
 .nav .open > a:focus {background-color: transparent;}
 
 
-#map {
+#map, .col-lg-12{
   height: 400px;
   z-index: -1000;
   /*background: url(../img/map.png) no-repeat 100% 50%;*/
