--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,9 @@ html { height: 100%;}
 
 
 #map, .col-lg-12{
-  height: 400px;
-  z-index: -1000;
+    width: 100%;
+    height: 450px;
+    z-index: -1000;
   /*background: url(../img/map.png) no-repeat 100% 50%;*/
 }
 
