--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ header {
 #topBar {
   width: 100%;
   height: 40px;
-  background: #123;
+  background: #2F6581;
 }
 
 /* -------------
@@ -210,6 +210,7 @@ TABS
 
 .tab-pane label {
   height: 22px;
+  color: rgba(0,0,0,.6);
 }
 
 #budget .slider-container {
@@ -243,28 +244,43 @@ MAIN CONTENT
 
 }
 
+.search #map-area {
+  display: block;
+}
+
+.book #map-area {
+  display: none;
+}
+
 #map-area {
   width: 100%;
   position: relative;
 }
 
 #map {
-  /*text-indent: -9999px;*/
-  background: #ECECEC url(../img/mapHKGNRT.svg);
-  background: #ECECEC url(../img/map.png);
   background-size: cover;
   background-position: center center;
 }
 
+#map.explore {
+  background-image: url(../img/map-explore.png);
+}
+
+#map.hkgsin {
+  background-image: url(../img/map.png);
+}
+
 #info-layer {
   height: 100%;
-  overflow: scroll;
   position: relative;
 }
 
 #info-content {
   background: #fafafa;
-  height: 400px;
+}
+
+.buttonHidden {
+  display: none;
 }
 
 #infoButton {
@@ -282,9 +298,30 @@ MAIN CONTENT
 #infoButton button {
   width: 100%;
   line-height: 46px;
-  background: #CB4F43;
   border: 0;
   color: #fff;
+}
+
+.inactiveButton {
+  background: #ccc;
+}
+
+.activeButton {
+  background: #CB4F43;
+}
+
+.search #bookingContent {
+  display: none;
+}
+
+.book #bookingContent {
+  display: block;
+}
+
+#bookingContent {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 footer {
@@ -491,10 +528,10 @@ RESPONSIVE FIXES - LARGE DEVICES AND DESKTOP
     width: 30%;
     height: 100%;
     overflow: scroll;
+    background: #fafafa;
   }
 
   #info-content {
-    height: 100%;
     padding: 20px;
   }
 
